<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="330dp"
    android:background="@drawable/loosback2"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chakrapetchsemibold"
        android:textColor="@color/white"
        android:text="@string/lost"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="207dp"
        android:layout_height="27dp"
        android:src="@drawable/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/chakrapetchsemibold"
        android:text="@string/lostText"
        android:textSize="20sp" />
    <ImageView
        android:layout_width="207dp"
        android:layout_height="27dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/newGame"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/newGame"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:fontFamily="@font/chakrapetchmedium"
            android:gravity="center"/>
    </LinearLayout>


</LinearLayout>