<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sudokuback"
    tools:context=".Sudoku">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <TextView
                android:id="@+id/time"
                android:layout_width="180dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mistakes"
                android:layout_width="140dp"
                android:layout_height="25dp"
                android:text="@string/mistake"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <GridLayout
            android:id="@+id/gridmain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:columnCount="3"
            android:rowCount="3" />

        <LinearLayout
            android:id="@+id/controlButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/undo"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/undo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Undo"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/erace"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Erase"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/hint"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/lightbulb" />

                    <TextView
                        android:id="@+id/hintCount"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="26dp"
                        android:layout_marginTop="17dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="14dp" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hint"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/numberbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_game"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/main_button"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:text="@string/newGame"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/solve"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/main_button"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:text="@string/solve"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/setting"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundcolorsettingsider"
            android:src="@drawable/settings" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>